Editorial revisions to labeling form elements section

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3956,17 +3956,36 @@ However, most authors do not need detailed understanding of the algorithms since
 
         <section id="naming_with_labels">
           <h5>Naming Form Controls with the Label Element</h5>
-          <p>The HTML <code>label</code> element allows authors to give a form control a label, and have the two be programmatically associated so that assistive technologies can render the label when the user interacts with the form control.</p>
-          <p>For example, the purpose of a checkbox without a label would be unclear. If there's text next to the checkbox, visual users can understand the purpose, but users of assistive technology will only experience a checkbox without a label when interacting with the checkbox. Using the <code>label</code> element gives the checkbox a label and allows all users to access the label easily.</p>
-          <pre><code>&lt;label>
- &lt;input type="checkbox" name="subscribe">
- subscribe to our newsletter
-&lt;/label></code></pre>
-          <p>The form control can also be associated with the label by using the `for` attribute on the `label` element. This allows the label and the form control to have different parents in the DOM, but requires adding an `id` attribute to the form control, which can be error-prone. When possible, use encapsulation instead of the `for` attribute.</p>
-          <pre><code>&lt;input type="checkbox" name="subscribe" id="subscribe_checkbox">
-&lt;label for="subscribe_checkbox">subscribe to our newsletter&lt;/label></code></pre>
-          <p>Using the <code>label</code> element satisfies <a href="#naming_rule_visible_text">Rule 2: Prefer Visible Text</a> and <a href="#naming_rule_native_techniques">Rule 3: Prefer Native Techniques</a>.</p>
-          <p>Another advantage of the <code>label</code> element is that clicking the label focuses or activates the associated form control, as if the form control had been clicked. This increases the hit area for the form control.</p>
+          <p>
+            The HTML <code>label</code> element enables authors to identify content that serves as a label and associate it with a form control.
+            When a <code>label</code> element is associated with a form control, Browsers calculate an accessible name for the form control from the <code>label</code> content.
+          </p>
+          <p>
+            For example, text displayed adjacent to a checkbox may be visually associated with the checkbox, so it is understood as the checkbox label by users who can perceive that visual association.
+            However, unless the text is programmatically associated with the checkbox, assistive technology users will experience a checkbox without a label.
+            Wrapping the checkbox and the labeling text in a <code>label</code> element as follows gives the checkbox an accessible name.
+          </p>
+          <pre><code>
+  &lt;label>
+    &lt;input type="checkbox" name="subscribe">
+    subscribe to our newsletter
+  &lt;/label>
+          </code></pre>
+          <p>
+            A form control can also be associated with a label by using the <code>for</code> attribute on the <code>label</code> element.
+            This allows the label and the form control to have different parents in the DOM, but requires adding an <code>id</code> attribute to the form control, which can be error-prone.
+            When possible, use the above encapsulation technique for association instead of the following <code>for</code> attribute technique.
+          </p>
+          <pre><code>
+  &lt;input type="checkbox" name="subscribe" id="subscribe_checkbox">
+  &lt;label for="subscribe_checkbox">subscribe to our newsletter&lt;/label>
+          </code></pre>
+          <p>
+            Using the <code>label</code> element is an effective technique for satisfying <a href="#naming_rule_visible_text">Rule 2: Prefer Visible Text</a>.
+            It also satisfies <a href="#naming_rule_native_techniques">Rule 3: Prefer Native Techniques</a>.
+            Native HTML labels offer an important usability and accessibility advantage over ARIA labeling techniques: browsers automatically make clicking the label equivalent to clicking the form control.
+            This increases the hit area of the form control.
+          </p>
         </section>
 
         <section id="naming_with_legends">
