Mention that caption/figcaption satisfy rule 2 and 3

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4061,6 +4061,8 @@ However, most authors do not need detailed understanding of the algorithms since
  &lt;img alt="Painting of a person walking in a desert." src="Hole_JesusalDesierto.jpg">
  &lt;figcaption>Jesus entering the desert as imagined by William Hole, 1908&lt;/figcaption>
 &lt;/figure></code></pre>
+
+          <p>Using the <code>caption</code> element to name a <code>table</code> element, or a <code>figcaption</code> element to name a <code>figure</code> element, satisfies <a href="#naming_rule_visible_text">Rule 2: Prefer Visible Text</a> and <a href="#naming_rule_native_techniques">Rule 3: Prefer Native Techniques</a>.</p>
         </section>
 
         <section id="naming_with_fallback">
