--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3920,10 +3920,14 @@ However, most authors do not need detailed understanding of the algorithms since
           </code></pre>
   <p>The <code>aria-labelledby</code> property is useful in a wide variety of situations because:</p>
   <ul>
-    <li>It has the highest precedence when browsers calculate accessible names, i.e., it overrides names from child content and all other naming attributes, including <code>aria-label</code>.</li>
-    <li>It can concatenate content from multiple elements into a single name string.</li>
-    <li>It incorporates content from elements regardless of their visibility, i.e., it even includes content from elements with <code>display:none</code> or <code>visibility:hidden</code> in the calculated name string.</li>
-    <li>It incorporates the value of input elements, i.e., if it references a textbox, the value of the textbox is included in the calculated name string.</li>
+    <li><p>It has the highest precedence when browsers calculate accessible names, i.e., it overrides names from child content and all other naming attributes, including <code>aria-label</code>.</p></li>
+    <li><p>It can concatenate content from multiple elements into a single name string.</p></li>
+    <li>
+      <p>It incorporates content from elements regardless of their visibility, i.e., it even includes content from elements with <code>display:none</code> or <code>visibility:hidden</code> in the calculated name string.</p>
+      <pre><code>&lt;span id="night-mode-label" hidden>Night mode&lt;/span>
+  &lt;input type="checkbox" role="switch" aria-labelledby="night-mode-label"></code></pre>
+    </li>
+    <li><p>It incorporates the value of input elements, i.e., if it references a textbox, the value of the textbox is included in the calculated name string.</p></li>
   </ul>
           <p>
             In some cases, the most effective name for an element is its own content combined with the content of another element.
@@ -3940,9 +3944,12 @@ However, most authors do not need detailed understanding of the algorithms since
             If an element is referenced more than one time, only the first reference is processed.
             When concatenating content from multiple elements, browsers trim leading and trailing white space and separate content from each element with a single space.
           </p>
-          <p>
-            To-do: add example to show reference to hidden elements and an input that demonstrates spacing between strings from referenced elements.
-          </p>
+          <pre><code>&lt;section role="alert" aria-labelledby="alert-title alert-code">
+ &lt;h2 id="alert-title">Alert&lt;/h2>
+ &lt;p id="alert-code">code: red&lt;/p>
+ &lt;p>We're out of peanuts.&lt;/p>
+&lt;/section></code></pre>
+          <p>In the above example, the accessible name of the alert will be "Alert code: red", with a space between "alert" and "code", and not "Alertcode: red".</p>
           <ol class="warning">
             <li>The <code>aria-labelledby</code> property cannot be chained, i.e., if an element with <code>aria-labelledby</code> references another element that also has <code>aria-labelledby</code>, the <code>aria-labelledby</code> attribute on the referenced element will be ignored.</li>
             <li>If an element is referenced by <code>aria-labelledby</code> more than one time during a name calculation, the second and any subsequent references will be ignored.</li>
